<resources>
    <string name="app_name">My Schedule</string>
    <string name="app_name_short">MS</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="created_by_Nimesh">Created by Nimesh Kadecha </string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add +</string>
    <string name="log_out">Log out</string>
    <string name="add_stage">Add stage</string>
    <string name="add_sub_stage">Add sub stage</string>
    <string name="intervals">intervals</string>
    <string name="_1">1</string>
    <string name="enter_date">Enter Date</string>
    <string name="amount">Amount</string>
    <string name="drip">Drip</string>
    <string name="spray">Spray</string>
    <string name="continue_l">continue</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="addNormal">Add</string>
    <string name="enter_date_dd_mm_yyyy">Enter Date (dd/mm/yyyy)</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_quentity">Enter Quentity</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_header_optional">Enter Header (Optional)</string>
    <string name="enter_footer_optional">Enter Footer (Optional)</string>
    <string name="T_C">
            <b>1.</b>અકાઉન્ટ ના નવા આઈડી પાસવર્ડ માટે એડમીન નો સંપર્ક કરવો
        \n\n<b>2.</b> તમારા એકાઉન્ટનો આઈડી પાસવર્ડ કોઈને આપવો નહીં.
        \n\n<b>3.</b> જો તમે તમારા એકાઉન્ટનો આઈડી પાસવર્ડ કોઈને આપશો અને તમારો કોઈ પણ ડેટા લોસ થશે તો એને પાછો લાવી શકાશે નહીં
        \n\n<b>4.</b> એક એકાઉન્ટ બીજા કોઈ પણ પ્રકારના ફોનમાં લોગીન કરવું નહીં તેનાથી ડેટા લોસ થવાનો ભય રહેશે એટલે કૃપા કરી માત્ર એક જ ફોનમાં એપનો યુઝ કરો
        \n\n<b>5.</b> Admin Contact: +916353177220
    </string>

    <!-- ✅ Add Unit Options -->
    <string-array name="unit_options">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>liter</item>
    </string-array>
</resources>
