<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".pages._5_TimingInformation">

    <include
        android:id="@+id/include4"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1Drip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drip"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutName2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutName2"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spray"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch1Drip"
        app:layout_constraintStart_toEndOf="@+id/switch1Drip"
        app:layout_constraintTop_toTopOf="@+id/switch1Drip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_date"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNameHeader"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Header"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/header"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNamefooter"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="Footer"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/footer"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/intervals"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNamefooter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/days"
            android:text="@string/_1"
            android:inputType="number"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAMo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/amount"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutName"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/_1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutAMo"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutName"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutAMo"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutAMo" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/continueToNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continue_l" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>